# direnv-sidecar

./: .envrc  .gitignore  Cargo.toml  shell.nix
src/: client.rs  init.rs  main.rs  server.rs
test/: .envrc
