[package]
name = "direnv-sidecar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clap_complete = "4.5.2"
color-eyre = "0.6.3"
eyre = "0.6.12"
libc = "0.2.155"
nix = { version = "0.29.0", features = ["process"] }
procfs = "0.16.0"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
zbus = { version = "4.2.2", features = ["tokio"], default-features = false }
